--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 html {
   font-size: 62.5%;
   overflow-x: hidden;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   scroll-padding-top: 7rem;
 }
 
